# cpp-project-template

./: CMakeLists.txt  README.md  boot.sh  groups  main.cc  project.config
include/: logging.hpp  stacktrace.hpp
src/: logging.cpp  main.cpp  stacktrace.cpp
